--- a/static/index.html
+++ b/static/index.html
@@ -1454,7 +1454,7 @@
                         <div class="config-section">
                             <div class="config-section-title">
                                 <span class="config-section-icon">🔥</span>
-                                <span>Firecrawl 爬取配置</span>
+                                <span>Firecrawl 爬取配置(选填)</span>
                             </div>
                             <div class="form-group">
                                 <label class="form-label">API Key</label>
